--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="css/styles.css" rel="stylesheet">
     <title>Tet's Holiday </title>
+    <link rel="icon" href="image/favicon.ico" type="image/x-icon">
+
     <style>
             body{
                 width: 100%;
@@ -39,23 +41,28 @@
         </style>    
 </head>
 <body>
-        <canvas id="constellationel" width="1920" height="984" style="margin: -40px -10px; position: absolute;"></canvas>
-        <div id="countdown">
-                <div id='tiles'></div>
-                <div class="labels">
-                  <li>Days</li>
-                  <li>Hours</li>
-                  <li>Mins</li>
-                  <li>Secs</li>
-                </div>
-              </div>
+    <canvas id="constellationel" width="1920" height="984" style="margin: -40px -10px; position: absolute;"></canvas>
+    <div class ="content"> 
+            <h2>Tết ơi. Tết rồi.</h2>  
+            <h1>Canh Tý 2020</h1>
+    </div>
+    <div id="countdown">
+        <div id='tiles'></div>
+            <div class="labels">
+              <li>Days</li>
+              <li>Hours</li>
+              <li>Mins</li>
+              <li>Secs</li>
+            </div>
+        </div>
+    </div>
 
-</div>
+    <div class='block-emoji'>🎉🎇🎇🎊</div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-        <script src="js/scripts.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-        <script src="js/constellationel.js"></script>
-		<script src="js/countdown.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="js/scripts.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/constellationel.js"></script>
+	<script src="js/countdown.js"></script>
 </body>
 </html>
