Change content for next year 😃
Change content for next year 😃

--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Đếm ngược đến Tết Nguyên Đán 2021</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="Còn bao nhiêu ngày nữa đến Tết Nguyên Đán Tân Sửu 2021?" />
+    <meta property="og:title" content="Đếm ngược ngày đến Tết" />
+    <meta property="og:description" content="Còn bao nhiêu ngày nữa đến Tết Nguyên Đán Tân Sửu 2021?" />
     <link href="css/styles.css" rel="stylesheet">
     <title>Tet's Holiday </title>
     <link rel="icon" href="image/favicon.ico" type="image/x-icon">
@@ -44,7 +48,7 @@
     <canvas id="constellationel" width="1920" height="984" style="margin: -40px -10px; position: absolute;"></canvas>
     <div class ="content"> 
             <h2>Tết ơi. Tết rồi.</h2>  
-            <h1>Canh Tý 2020</h1>
+            <h1>Tân Sửu 2021</h1>
     </div>
     <div id="countdown">
         <div id='tiles'></div>
